// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/Series renders correctly 1`] = `
<Fragment>
  <ClickableCell
    onClick={[Function]}
  >
    <span>
       
    </span>
    Rallycross
  </ClickableCell>
</Fragment>
`;

exports[`components/columns/Series renders correctly 2`] = `
<Fragment>
  <ClickableCell
    onClick={[Function]}
  >
    <span>
       
    </span>
    Rallycross
  </ClickableCell>
  <SeriesModal
    isOpen={true}
    onClose={[Function]}
    ownedCars={Array []}
    ownedTracks={Array []}
    seasonId={3450}
    seriesId={345}
  />
</Fragment>
`;

exports[`components/columns/Series renders correctly 3`] = `
<Fragment>
  <ClickableCell
    onClick={[Function]}
  >
    <span>
       
    </span>
    Rallycross
  </ClickableCell>
</Fragment>
`;

exports[`components/columns/Series renders favourite series 1`] = `
<Fragment>
  <ClickableCell
    onClick={[Function]}
  >
    <StarIcon />
    <span>
       
    </span>
    Rallycross
  </ClickableCell>
</Fragment>
`;
